[gd_scene load_steps=2 format=3 uid="uid://c8us5ssun0hbr"]

[ext_resource type="Script" uid="uid://dybtntcywv4dd" path="res://pause_menu.gd" id="1_hdmo1"]

[node name="PauseMenu" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_hdmo1")

[node name="Background" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.3647059)

[node name="MenuContainer" type="VBoxContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -53.0
offset_top = -50.5
offset_right = 53.0
offset_bottom = 50.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="ResumeButton" type="Button" parent="MenuContainer"]
layout_mode = 2
text = "Kontynuuj"

[node name="ResetButton" type="Button" parent="MenuContainer"]
layout_mode = 2
text = "Reset Świata"

[node name="QuitButton" type="Button" parent="MenuContainer"]
layout_mode = 2
text = "Zamknij grę"

[connection signal="pressed" from="MenuContainer/ResumeButton" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="MenuContainer/ResetButton" to="." method="_on_reset_button_pressed"]
[connection signal="pressed" from="MenuContainer/QuitButton" to="." method="_on_quit_button_pressed"]
